--- a/index.html
+++ b/index.html
@@ -327,16 +327,16 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
         import { getDatabase, ref, push, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
-        // Firebase Configuration
+        // Firebase Configuration 
         const firebaseConfig = {
-            apiKey: "AIzaSyD9ZnpzF0i43J9Srwq29TB-qBBSlvMVFhc",
-            authDomain: "xpense-wise.firebaseapp.com",
-            databaseURL: "https://xpense-wise-default-rtdb.firebaseio.com",
-            projectId: "xpense-wise",
-            storageBucket: "xpense-wise.appspot.com",
-            messagingSenderId: "59211648199",
-            appId: "1:59211648199:web:85a37dad582893104c82e2",
-            measurementId: "G-BSQ43QE0Z1"
+            apiKey: "AIzaSyDrogChOvG15SxmhcyB6jIp2RVb7eEkcoE",
+            authDomain: "xpense-wise-6f45d.firebaseapp.com",
+            databaseURL: "https://xpense-wise-6f45d-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "xpense-wise-6f45d",
+            storageBucket: "xpense-wise-6f45d.firebasestorage.app",
+            messagingSenderId: "307234653906",
+            appId: "1:307234653906:web:23418ee0d99089ded74f0b",
+            measurementId: "G-CMZQQ3GRW7"
         };
 
         // Initialize Firebase
@@ -430,3 +430,4 @@ onValue(ref(db, 'transactions'), (snapshot) => {
     </script>
 </body>
 </html>
+
